+------------------------------------------------------------------------------+
pould v0.4.2.9000 date: 5-12-2018
  -Streamlined the integration of cALD() into LDWrap().
  
+------------------------------------------------------------------------------+
pould v0.4.1.9000 date: 5-11-2018
  -Updated the Vignette and ReadMe file to correct versioning, punctuation and 
   spelling errors, and elaborate on documentation for cALD()'s report of the
   number of haplotypes. 

+------------------------------------------------------------------------------+
pould v0.4.0.9000 date: 5-8-2018
  -Added the number of haplotypes evaluated to the values returned by cALD(), 
   and thereby to the content of the *LD_results.csv file generated by LDWrap().
  -Updated the documentation to reflect this.
  
+------------------------------------------------------------------------------+
pould v0.3.0.9000 date: 5-3-2018
  -Revised drb1.dqb1.demo so that it represents phased DRB1~DQB1 data pulled 
   directly from hla.hap.demo.
  -Added README.Rmd and README.md files for GitHub.
  -Added NEWS.
  -Added Vignette.
  -Changed LDWrap() notification for input data lacking required columns, to 
   reflect the data source as either a data frame or a file. 
  -Removed the passFile parameter from cALD(), and updated documentation.

+------------------------------------------------------------------------------+
pould v0.2.1.9000 date: 4-30-2018
  -Added dataset documentation files.

+------------------------------------------------------------------------------+
pould v0.2.0.9000 date: 4-28-2108
  -Added *Rd files for each function.
  -Added hla.hap.demo and drb1.dqb1.demo datasets.
  
+------------------------------------------------------------------------------+
pould v0.1.0.9000 date: 4-27-2018
  -Created Package that includes the exported LDWrap() and cALD() functions, 
   and the internal writeVector() function.