@@ -12,7 +12,7 @@
 
 <meta name="author" content="Steven J. Mack, PhD – sjmack@chori.org" />
 
-<meta name="date" content="2018-05-12" />
+<meta name="date" content="2018-05-18" />
 
 <title>POULD: Phased Or Unphased Linkage Disequilibrium</title>
 
@@ -32,12 +32,12 @@
 
 <h1 class="title toc-ignore">POULD: Phased Or Unphased Linkage Disequilibrium</h1>
 <h4 class="author"><em>Steven J. Mack, PhD – <a href="mailto:sjmack@chori.org">sjmack@chori.org</a></em></h4>
-<h4 class="date"><em>May 12, 2018</em></h4>
+<h4 class="date"><em>May 18, 2018</em></h4>
 
 
 
 <ul>
-<li>Package Version: 0.4.2.9000</li>
+<li>Package Version: 0.5.0.9000</li>
 </ul>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
@@ -129,7 +129,11 @@ A~DRB3,Not Calculated,Subject Threshold=10,Complete subjects=0,.,
 .
 .
 .</code></pre>
-<p><em>LDWrap()</em> attemtps to peform these LD calculations for all pairs of the classical HLA loci – HLA-A, -C, -B, -DRB1, -DRB3, -DRB4, -DRB5, -DQA1, -DQB1, -DPA1 and -DPB1. If a haplotype dataset does not include all of these loci (e.g., A~DRB3, above), the *LD_results.csv file will include rows for locus pairs for which no data was avialable. As shown above, those rows contain the data, <code>Not Calculated</code>,<code>Subject Threshold=10</code>,<code>Complete subjects=0</code>, <code>.</code>, and `<code>. This information is also included for locus pairs for which the number of subjects with available haplotype data for that locus pair is below the</code>threshold` value (see below).</p>
+<p><em>LDWrap()</em> attemtps to peform these LD calculations for all pairs of the classical HLA loci – HLA-A, -C, -B, -DRB1, -DRB3, -DRB4, -DRB5, -DQA1, -DQB1, -DPA1 and -DPB1. If a haplotype dataset does not include all of these loci (e.g., A~DRB3, above), the <code>*LD_results.csv</code> file will include rows for locus pairs for which no data was avialable. As shown above, those rows contain the data, <code>Not Calculated</code>, <code>Subject Threshold=10</code>, <code>Complete subjects=0</code>, <code>.</code>, and ‘’. This information is also included for locus pairs for which the number of subjects with available haplotype data for that locus pair is below the <code>threshold</code> value (see “Parameters”, below). In cases where at least one locus in a pair is monomorphic, no LD calculations are performed, and the pertinent rows in the <code>*LD_results.csv</code> file will contain the data, <code>Not Calculated</code>, <code>Subject Threshold=10</code>, <code>Complete subjects=0</code>, <code>&quot;locusName&quot; is monomorphic.</code>, and ``, as shown below.</p>
+<pre><code>Loc1~Loc2,D',Wn,WLoc1/Loc2,WLoc2/Loc1,N_Haplotypes
+B~DRB3,Not Calculated,Subject Threshold=10,Complete subjects=130,DRB3 is monomorphic.,
+DRB3~DRB4,Not Calculated,Subject Threshold=10,Complete subjects=130,DRB3 is monomorphic. DRB4 is monomorphic.,
+DRB3~DQA1,Not Calculated,Subject Threshold=10,Complete subjects=93,DRB3 is monomorphic.,</code></pre>
 </div>
 </div>
 <div id="parameters" class="section level2">
